--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "admin-work",
-  "version": "2.1.1",
-  "scripts": {
-    "dev": "vite",
-    "staging": "vite build  --mode staging",
-    "build": "vite build",
-    "tsc": "vue-tsc --noEmit",
-    "serve": "vite preview"
-  },
   "dependencies": {
     "@vueuse/core": "^8.5.0",
     "axios": "^0.21.1",
@@ -63,5 +54,17 @@
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svg-icons": "^1.0.1",
     "vue-tsc": "^0.3.0"
-  }
+  },
+  "name": "admin-work",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx,.md,.json --max-warnings 0 && pretty-quick --check --branch main",
+    "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
+    "serve": "vite preview",
+    "staging": "vite build  --mode staging",
+    "tsc": "vue-tsc --noEmit"
+  },
+  "version": "2.1.1"
 }
