--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mockjs": "^1.1.0",
     "path-browserify": "^1.0.1",
     "pinia": "^2.0.14",
+    "postcss-import": "^15.0.0",
     "print-js": "^1.6.0",
     "qrcode": "^1.4.4",
     "qs": "^6.10.1",
@@ -16,8 +17,9 @@
     "simplemde": "^1.11.2",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.25",
+    "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.0.10",
-    "vuedraggable": "^4.0.3",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2",
     "xgplayer": "^2.28.0"
   },
@@ -42,6 +44,7 @@
     "eslint-plugin-vue": "^7.13.0",
     "naive-ui": "^2.33.3",
     "postcss": "^8.4.13",
+    "postcss-nesting": "^10.2.0",
     "prettier": "^2.3.2",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
